PyMaker/datas/object2/RawHTML/i4101/Python_DOC_referPages.python-def-init-self-config-path-str-args-kwargs-syntaxerror-in.txt
<div class="post-text" itemprop="text">
<p>I am running python 3.6.5 on mac, the owner of the code told me to bring this here as he says it's some sort of local error. Not sure why this is happening: </p>
<pre><code>Traceback (most recent call last):
File "/Users/User/Downloads/Bot/Python/launcher.py", line 2, in &lt;module&gt;
    from catcher import Poke
File "/Users/User/Downloads/Bot/Python/catcher.py", line 11
    def __init__(self, config_path: str, *args, **kwargs):
                                       ^
SyntaxError: invalid syntax
</code></pre>
<p>Here is the error area: </p>
<pre><code>import asyncio
import aiohttp
import discord
import json
import random

from distutils.version import LooseVersion
__version__ = '0.2.5'

class Poke(discord.Client):
    def __init__(self, config_path: str, *args, **kwargs):
        self.config_path = config_path
        self.update_check = False
        with open(self.config_path) as f:
            self.configs = json.load(f)
</code></pre>
<p>Edit: Added more code and reorganized the code indents to match the terminal reading as well as the typed code. Also added an extended description</p>
</div>
<div class="post-text" itemprop="text">
<p>I am assuming you are not running your program with Python 3.5+.</p>
<p>Since your code imports from a module that seems to be Python 3 compatible only, a SyntaxError is raised.</p>
<p><a href="https://docs.python.org/3/library/typing.html" rel="nofollow noreferrer">Type hints</a> (the <code>config_path: str</code>) are new in Python 3.5 - make sure you're running that python version by typing:</p>
<pre><code>$ python3 --version
Python 3.6.2
</code></pre>
<p>In your terminal.</p>
<p>Make sure you're also executing your program like so:</p>
<pre><code>$ python3 launcher.py
</code></pre>
</div>
<span class="comment-copy">What's the code behind it? You might have  a missing close parenthesis <code>)</code></span>
<span class="comment-copy">You need things under <code>__init__</code>, a <code>pass</code> maybe? Otherwise, you need to paste more of your code, it's currently not a <a href="https://stackoverflow.com/help/mcve">Minimal, Complete, and Verifiable example</a>, by the way, what version are you running?</span>
<span class="comment-copy">Alternatively, are you running this code with Python 2 or Python 3? The <code>config_path: str</code> is python 3 syntax only</span>
<span class="comment-copy">It's a long code, and the owner told me to ask here</span>
<span class="comment-copy">The error traceback shows <code>def __init__</code> as not being indented, which does not agree with your posted code.  Please edit to show us the <b>exact</b> code and error message.</span>
<span class="comment-copy">I'm running python 3.6.5</span>
<span class="comment-copy">@abccd its pointed to the ":" right before "str, *args, **kwargs)"</span>
<span class="comment-copy">@CedricWong How are you executing your python file? Are you typing <code>python launcher.py</code> or <code>python3 launcher.py</code>?</span>
<span class="comment-copy">I launch it through the python 3.6.5 Launcher app</span>
